--- a/index.html
+++ b/index.html
@@ -525,14 +525,14 @@
         const catsData = [
             {
                 id: 1,
-                name: '小王子',
-                age: '1岁8个月',
+                name: '金宝',
+                age: '2岁',
                 breed: '英国金渐层',
-                personality: '温顺高贵，喜欢与人亲近',
-                description: '小王子是一只血统纯正的英国金渐层，拥有华丽的金色被毛和绿色眼睛。性格温顺亲人，非常适合家庭饲养。已完成所有疫苗接种，身体健康活泼。',
-                image: 'https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=800&h=600&fit=crop',
+                personality: '沉稳大气，王者风范',
+                description: '金宝是李先生家的镇宅之宝，拥有纯正的12色金渐层血统。体型健硕，毛色金黄发亮，在阳光下闪烁着迷人的光芒。性格沉稳温和，不喜欢吵闹，喜欢安静地趴在主人身边看书。已经完成绝育手术，身体健康，定期体检。特别喜欢在阳台上晒太阳，享受悠闲的午后时光。',
+                image: 'https://images.unsplash.com/photo-1574158622682-e40e69881006?w=800&h=600&fit=crop',
                 gender: '公猫',
-                weight: '4.8kg',
+                weight: '5.8kg',
                 color: '12色金渐层',
                 vaccinated: true,
                 neutered: true,
@@ -540,12 +540,12 @@
             },
             {
                 id: 2,
-                name: '小公主',
-                age: '1岁6个月',
+                name: '蜜桃',
+                age: '1岁4个月',
                 breed: '英国金渐层',
-                personality: '活泼可爱，喜欢撒娇卖萌',
-                description: '小公主是李先生家的小仙女，拥有完美的圆脸和胖胖的身体。特别喜欢被抱抱，会主动蹭人的手寻求关注。毛色纯正，眼睛明亮，是理想的家庭宠物。',
-                image: 'https://images.unsplash.com/photo-1513245543132-31f507417b26?w=800&h=600&fit=crop',
+                personality: '甜美可人，撒娇专家',
+                description: '蜜桃像她的名字一样甜美，是家里的温柔小公主。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
+                image: 'https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?w=800&h=600&fit=crop',
                 gender: '母猫',
                 weight: '4.2kg',
                 color: '11色金渐层',
@@ -555,14 +555,14 @@
             },
             {
                 id: 3,
-                name: '胖虎',
-                age: '2岁3个月',
+                name: '元宝',
+                age: '3岁',
                 breed: '英国金渐层',
-                personality: '憨厚老实，吃嘛嘛香',
-                description: '胖虎是家里的老大，体型健壮，性格沉稳。虽然有点胖，但动作敏捷，喜欢在家里巡视。对小朋友特别有耐心，是很好的陪伴猫咪。',
-                image: 'https://images.unsplash.com/photo-1511044568932-288e707ed384?w=800&h=600&fit=crop',
+                personality: '憨厚老实，食量大王',
+                description: '元宝是家里的开心果，体型微胖但非常健康。拥有金灿灿的被毛和圆滚滚的身体，看起来就像一个行走的元宝。性格憨厚老实，从不主动惹事，但对食物有着执着的爱。每天定时定量喂食，已经养成良好的饮食习惯。特别喜欢被挠下巴，只要一挠就会发出满足的呼噜声。是理想的陪伴型猫咪。',
+                image: 'https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=800&h=600&fit=crop',
                 gender: '公猫',
-                weight: '6.5kg',
+                weight: '6.8kg',
                 color: '12色金渐层',
                 vaccinated: true,
                 neutered: true,
@@ -570,48 +570,18 @@
             },
             {
                 id: 4,
-                name: '小雪',
-                age: '10个月',
+                name: '雪球',
+                age: '11个月',
                 breed: '英国金渐层',
-                personality: '聪明伶俐，学习能力强',
-                description: '小雪是家里的小宝贝，虽然年纪小但很懂事。已经学会了使用猫砂和各种小技巧。毛色纯白带金，特别漂亮，是李先生精心培育的优质猫咪。',
-                image: 'https://images.unsplash.com/photo-1573865526739-10659fec78a5?w=800&h=600&fit=crop',
+                personality: '活泼好动，好奇心强',
+                description: '雪球是家里最小但最活泼的成员，虽然年纪小但已经展现出金渐层的优秀品质。毛色纯白中带着淡淡的金色，就像一个雪白的小绒球。特别爱玩，对任何会动的东西都充满好奇，喜欢追逐激光笔和逗猫棒。已经学会使用猫砂，吃饭很乖巧。因为是幼猫，还需要更多关注和陪伴，非常适合喜欢和猫咪互动的家庭。',
+                image: 'https://images.unsplash.com/photo-1513245543132-31f507417b26?w=800&h=600&fit=crop',
                 gender: '母猫',
-                weight: '3.5kg',
+                weight: '3.6kg',
                 color: '11色金渐层',
                 vaccinated: true,
                 neutered: false,
                 addedDate: '2024-05-15'
-            },
-            {
-                id: 5,
-                name: '小金毛',
-                age: '1岁3个月',
-                breed: '英国金渐层',
-                personality: '温柔黏人，喜欢叫唤',
-                description: '小金毛性格特别温柔，喜欢黏着主人。每天早上会用软软的叫声叫醒主人，晚上会乖乖地睡在床头。是一只非常贴心的小猫咪。',
-                image: 'https://images.unsplash.com/photo-1495360010541-f48722b34f7d?w=800&h=600&fit=crop',
-                gender: '公猫',
-                weight: '4.6kg',
-                color: '12色金渐层',
-                vaccinated: true,
-                neutered: true,
-                addedDate: '2024-06-20'
-            },
-            {
-                id: 6,
-                name: '小橘子',
-                age: '8个月',
-                breed: '英国金渐层',
-                personality: '调皮捣蛋，好奇心强',
-                description: '小橘子是家里最活泼的小家伙，整天上蹿下跳探索家里的每一个角落。特别喜欢玩逗猫棒和激光笔，会给家里带来很多欢乐。毛色金黄发亮，眼睛像绿宝石一样清澈。',
-                image: 'https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?w=800&h=600&fit=crop',
-                gender: '公猫',
-                weight: '3.8kg',
-                color: '12色金渐层',
-                vaccinated: true,
-                neutered: false,
-                addedDate: '2024-07-25'
             }
         ];
 
