--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
         const catsData = [
             {
                 id: 1,
-                name: '金宝',
+                name: '矮脚',
                 age: '2岁',
                 breed: '英国金渐层',
                 personality: '沉稳大气，王者风范',
                 description: '金宝是李先生家的镇宅之宝，拥有纯正的12色金渐层血统。体型健硕，毛色金黄发亮，在阳光下闪烁着迷人的光芒。性格沉稳温和，不喜欢吵闹，喜欢安静地趴在主人身边看书。已经完成绝育手术，身体健康，定期体检。特别喜欢在阳台上晒太阳，享受悠闲的午后时光。',
-                image: 'https://images.unsplash.com/photo-1574158622682-e40e69881006?w=800&h=600&fit=crop',
+                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213444.JPG',
                 gender: '公猫',
                 weight: '5.8kg',
                 color: '12色金渐层',
@@ -787,4 +787,5 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
