--- a/index.html
+++ b/index.html
@@ -540,13 +540,13 @@
             },
             {
                 id: 2,
-                name: '蜜桃',
+                name: '朵朵',
                 age: '1岁4个月',
                 breed: '英国金渐层',
                 personality: '甜美可人，撒娇专家',
-                description: '蜜桃像她的名字一样甜美，是家里的温柔小公主。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
-                image: 'https://images.unsplash.com/photo-1596854407944-bf87f6fdd49e?w=800&h=600&fit=crop',
-                gender: '母猫',
+                description: '朵朵像她的名字一样甜美，已经被嘎蛋了。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
+                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213991.JPG',
+                gender: '公公',
                 weight: '4.2kg',
                 color: '11色金渐层',
                 vaccinated: true,
@@ -789,3 +789,4 @@
 </body>
 
 </html>
+
