--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             {
                 id: 1,
                 name: '矮脚',
-                age: '2岁',
+                age: '2个月',
                 breed: '英国金渐层',
                 personality: '沉稳大气，王者风范',
                 description: '金宝是李先生家的镇宅之宝，拥有纯正的12色金渐层血统。体型健硕，毛色金黄发亮，在阳光下闪烁着迷人的光芒。性格沉稳温和，不喜欢吵闹，喜欢安静地趴在主人身边看书。已经完成绝育手术，身体健康，定期体检。特别喜欢在阳台上晒太阳，享受悠闲的午后时光。',
@@ -548,7 +548,7 @@
                 image: 'https://ftp.mioz.cn/test/2025/11/27/1764213991.JPG',
                 gender: '公公',
                 weight: '4.2kg',
-                color: '11色金渐层',
+                color: '12色金渐层',
                 vaccinated: true,
                 neutered: true,
                 addedDate: '2024-02-20'
@@ -789,4 +789,5 @@
 </body>
 
 </html>
+
 
