--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
             cursor: pointer;
+            display: flex;
+            flex-direction: column;
         }
 
         .cat-card:hover {
@@ -211,7 +213,9 @@
             width: 100%;
             height: 250px;
             object-fit: cover;
+            object-position: center;
             background: linear-gradient(45deg, #f0f0f0, #e0e0e0);
+            border-radius: 18px 18px 0 0;
         }
 
         .cat-info {
@@ -279,6 +283,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center;
         }
 
         .modal-close {
@@ -525,12 +530,12 @@
         const catsData = [
             {
                 id: 1,
-                name: '矮脚',
-                age: '2个月',
+                name: '金宝',
+                age: '2岁',
                 breed: '英国金渐层',
                 personality: '沉稳大气，王者风范',
                 description: '金宝是李先生家的镇宅之宝，拥有纯正的12色金渐层血统。体型健硕，毛色金黄发亮，在阳光下闪烁着迷人的光芒。性格沉稳温和，不喜欢吵闹，喜欢安静地趴在主人身边看书。已经完成绝育手术，身体健康，定期体检。特别喜欢在阳台上晒太阳，享受悠闲的午后时光。',
-                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213444.JPG',
+                image: 'https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=800&h=600&fit=crop&auto=format',
                 gender: '公猫',
                 weight: '5.8kg',
                 color: '12色金渐层',
@@ -540,15 +545,15 @@
             },
             {
                 id: 2,
-                name: '朵朵',
+                name: '蜜桃',
                 age: '1岁4个月',
                 breed: '英国金渐层',
                 personality: '甜美可人，撒娇专家',
-                description: '朵朵像她的名字一样甜美，已经被嘎蛋了。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
-                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213991.JPG',
-                gender: '公公',
+                description: '蜜桃像她的名字一样甜美，是家里的温柔小公主。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
+                image: 'https://images.unsplash.com/photo-1513245543132-31f507417b26?w=800&h=600&fit=crop&auto=format',
+                gender: '母猫',
                 weight: '4.2kg',
-                color: '12色金渐层',
+                color: '11色金渐层',
                 vaccinated: true,
                 neutered: true,
                 addedDate: '2024-02-20'
@@ -560,7 +565,7 @@
                 breed: '英国金渐层',
                 personality: '憨厚老实，食量大王',
                 description: '元宝是家里的开心果，体型微胖但非常健康。拥有金灿灿的被毛和圆滚滚的身体，看起来就像一个行走的元宝。性格憨厚老实，从不主动惹事，但对食物有着执着的爱。每天定时定量喂食，已经养成良好的饮食习惯。特别喜欢被挠下巴，只要一挠就会发出满足的呼噜声。是理想的陪伴型猫咪。',
-                image: 'https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=800&h=600&fit=crop',
+                image: 'https://images.unsplash.com/photo-1495360010541-f48722b34f7d?w=800&h=600&fit=crop&auto=format',
                 gender: '公猫',
                 weight: '6.8kg',
                 color: '12色金渐层',
@@ -575,7 +580,7 @@
                 breed: '英国金渐层',
                 personality: '活泼好动，好奇心强',
                 description: '雪球是家里最小但最活泼的成员，虽然年纪小但已经展现出金渐层的优秀品质。毛色纯白中带着淡淡的金色，就像一个雪白的小绒球。特别爱玩，对任何会动的东西都充满好奇，喜欢追逐激光笔和逗猫棒。已经学会使用猫砂，吃饭很乖巧。因为是幼猫，还需要更多关注和陪伴，非常适合喜欢和猫咪互动的家庭。',
-                image: 'https://images.unsplash.com/photo-1513245543132-31f507417b26?w=800&h=600&fit=crop',
+                image: 'https://images.unsplash.com/photo-1573865526739-10659fec78a5?w=800&h=600&fit=crop&auto=format',
                 gender: '母猫',
                 weight: '3.6kg',
                 color: '11色金渐层',
@@ -787,7 +792,4 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
-
 </html>
-
-
