--- a/index.html
+++ b/index.html
@@ -530,12 +530,12 @@
         const catsData = [
             {
                 id: 1,
-                name: '金宝',
+                name: '矮脚',
                 age: '2岁',
                 breed: '英国金渐层',
                 personality: '沉稳大气，王者风范',
                 description: '金宝是李先生家的镇宅之宝，拥有纯正的12色金渐层血统。体型健硕，毛色金黄发亮，在阳光下闪烁着迷人的光芒。性格沉稳温和，不喜欢吵闹，喜欢安静地趴在主人身边看书。已经完成绝育手术，身体健康，定期体检。特别喜欢在阳台上晒太阳，享受悠闲的午后时光。',
-                image: 'https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=800&h=600&fit=crop&auto=format',
+                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213444.JPG',
                 gender: '公猫',
                 weight: '5.8kg',
                 color: '12色金渐层',
@@ -545,12 +545,12 @@
             },
             {
                 id: 2,
-                name: '蜜桃',
+                name: '朵朵',
                 age: '1岁4个月',
                 breed: '英国金渐层',
                 personality: '甜美可人，撒娇专家',
-                description: '蜜桃像她的名字一样甜美，是家里的温柔小公主。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
-                image: 'https://images.unsplash.com/photo-1513245543132-31f507417b26?w=800&h=600&fit=crop&auto=format',
+                description: '蜜桃像她的名字一样甜美，已经被嘎蛋了。拥有圆润的脸庞和大大的绿色眼睛，毛色呈现出蜜桃般的暖色调。特别喜欢黏着主人，会用软软的身体蹭人的腿，发出满足的呼噜声。已经学会使用猫砂盆，吃饭习惯很好，不挑食。最适合有小孩的家庭，对小朋友特别有耐心。',
+                image: 'https://ftp.mioz.cn/test/2025/11/27/1764213991.JPG',
                 gender: '母猫',
                 weight: '4.2kg',
                 color: '11色金渐层',
@@ -792,4 +792,5 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
