--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             }
             
             .fab {
-                bottom: 65px; /* 手机端浮动按钮位置调整 */
+                bottom: 38px; /* 手机端浮动按钮位置调整 (对应53px上移三分之一) */
             }
             
             .nav-menu {
@@ -1458,7 +1458,7 @@
     <nav class="nav" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
         <div class="container">
             <div class="nav-content">
-                <div style="display: flex; align-items: center; gap: var(--spacing-sm);">
+                <div style="display: flex; align-items: center; gap: var(--spacing-sm); transform: translateY(-8px);">
                     <div style="position: relative; font-size: 24px;">
                         🐱
                         <div style="position: absolute; top: -3px; right: -8px; font-size: 10px; opacity: 0.7;">🐾</div>
@@ -2276,7 +2276,7 @@
     </nav>
 
     <!-- 右下角私信按钮 -->
-    <button class="fab" onclick="openMessageModal()" style="bottom: 80px;">✉️</button>
+    <button class="fab" onclick="openMessageModal()" style="bottom: 53px;">✉️</button>
 
     <!-- 备份管理模态框 -->
     <div id="backupManagerModal" class="modal-overlay">
@@ -2328,7 +2328,7 @@
 
     <!-- 私信模态框 -->
     <div id="messageModal" class="modal-overlay">
-        <div class="modal-content">
+        <div class="modal-content" style="transform: translateY(-33px); margin-top: -33px;">
             <div class="modal-header">
                 <h3>发送私信给管理员</h3>
                 <button class="btn btn-secondary" onclick="closeMessageModal()">×</button>
@@ -2337,6 +2337,11 @@
                 <div class="form-group">
                     <label>消息内容</label>
                     <textarea class="input" id="messageContent" rows="6" placeholder="请输入您想对管理员说的话..."></textarea>
+                </div>
+                <div style="background: var(--apple-gray-light); padding: var(--spacing-sm); border-radius: var(--border-radius-sm); text-align: center; margin-top: var(--spacing-sm);">
+                    <div style="font-size: 18px; margin-bottom: 4px;">📧</div>
+                    <div style="font-weight: 600; color: var(--apple-black); margin-bottom: 4px;">联系邮箱</div>
+                    <div style="color: var(--apple-blue); text-decoration: none; cursor: pointer;" onclick="window.location.href='mailto:contact@example.com'">contact@example.com</div>
                 </div>
             </div>
             <div class="modal-footer">
