--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
             /* 移动端显示导航 */
             .mobile-quick-nav {
                 display: flex !important;
+                padding: 4px 0; /* 手机端底部导航高度减半 (spacing-xs: 8px → 4px) */
             }
 
             .grid-3 {
