--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             }
             
             .fab {
-                bottom: 38px; /* 手机端浮动按钮位置调整 (对应53px上移三分之一) */
+                bottom: 55px; /* 手机端浮动按钮位置调整，确保不被底部导航遮挡 */
             }
             
             .nav-menu {
