--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
             /* 移动端浮动按钮调整 */
             .fab {
-                bottom: 85px; /* 避免遮挡底部导航，增加间距 */
+                bottom: 110px; /* 避免遮挡底部导航，进一步增加间距 */
                 right: 20px;
             }
 
