--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
             /* 移动端浮动按钮调整 */
             .fab {
-                bottom: 40px; /* 往上移动，更靠近页面中心 */
+                bottom: 30px; /* 进一步往上移动 */
                 right: 20px;
             }
 
@@ -1459,7 +1459,7 @@
     <nav class="nav" style="position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
         <div class="container">
             <div class="nav-content">
-                <div style="display: flex; align-items: center; gap: var(--spacing-sm); transform: translateY(-8px);">
+                <div style="display: flex; align-items: center; gap: var(--spacing-sm); transform: translateY(-12px);">
                     <div style="position: relative; font-size: 24px;">
                         🐱
                         <div style="position: absolute; top: -3px; right: -8px; font-size: 10px; opacity: 0.7;">🐾</div>
