--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
             /* 移动端浮动按钮调整 */
             .fab {
-                bottom: 70px; /* 向下移动，确保不被底部导航遮挡 */
+                bottom: 140px; /* 进一步向上移动到指定位置 */
                 right: 20px;
             }
 
@@ -1460,11 +1460,6 @@
         <div class="container">
             <div class="nav-content">
                 <div style="display: flex; align-items: center; gap: var(--spacing-sm); transform: translateY(0px);">
-                    <div style="position: relative; font-size: 24px;">
-                        🐱
-                        <div style="position: absolute; top: -3px; right: -8px; font-size: 10px; opacity: 0.7;">🐾</div>
-                    </div>
-                    <div style="font-weight: 700; font-size: 20px; color: #8B4513; text-shadow: 0 1px 2px rgba(255, 107, 157, 0.3); font-family: 'Georgia', 'Times New Roman', serif; letter-spacing: 2px; text-transform: uppercase; background: linear-gradient(45deg, #8B4513, #A0522D); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">金猫之家</div>
                 </div>
                 
                 <div class="nav-menu" id="navMenu">
